# generator-cpp

./: .travis.yml  LICENSE  README.md  package.json  travis
generators/app/: index.js
generators/app/templates/: CMakeLists.txt  LICENSE  Makefile  README.md  _gitignore  configure
generators/app/templates/include/CppLibrary/: MyClass.hpp
generators/app/templates/include/CppProject/: MyClass.hpp
generators/app/templates/share/CppUtility/: CMakeLists.txt
generators/app/templates/share/CppUtility/src/: MyUtility.cxx
generators/app/templates/share/MyUtility/: CMakeLists.txt
generators/app/templates/share/MyUtility/src/: MyUtility.cxx
generators/app/templates/src/CppLibrary/: MyClass.cpp
generators/app/templates/src/CppProject/: MyClass.cpp
generators/app/templates/test/: Global.test.hpp  Main.test.cxx  Setup.test.hpp
generators/app/templates/test/CppLibrary/: MyClass.test.cpp
generators/app/templates/test/CppProject/: MyClass.test.cpp
generators/app/templates/tools/cmake/: CodeCoverage.cmake  CppLibraryConfig.cmake.in  CppLibraryConfigVersion.cmake.in  FindGTest.cmake  UninstallTarget.cmake.in
generators/app/templates/tools/doxygen/: Doxyfile.in
generators/app/templates/tools/doxygen/scripts/: push.sh
generators/class/: index.js
generators/class/templates/include/: MyClass.hpp
generators/class/templates/src/: MyClass.cpp
generators/class/templates/test/: MyClass.test.cpp
travis/: yo_cpp  yo_cpp_class
